log
do., 21 de sep. de 2025 23:44:13: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
do., 21 de sep. de 2025 23:49:20: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:80:15: error: variable 'last' set but not used [-Werror=unused-but-set-variable]
     TreeNode *last = NULL;
               ^~~~
cc1.exe: all warnings being treated as errors
9838868
do., 21 de sep. de 2025 23:49:47: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
afdab4a
do., 21 de sep. de 2025 23:55:08: 
 treemap.c | 41 +++++++++++++++++++++++++++++++++++++++--
 1 file changed, 39 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
ee6a723
do., 21 de sep. de 2025 23:59:07: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  18|3
total_score: 40/70
897c92d
lu., 22 de sep. de 2025  0:02:09: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
fbe84f8
